--- a/BeingChef/app/src/main/res/layout/activity_main.xml
+++ b/BeingChef/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.android.beingchef.MainActivity">
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@color/view_bg"-->
+    <!--android:gravity="center_horizontal"-->
+    <!--android:orientation="vertical"-->
+    <!--tools:context=".MainActivity">-->
+
+    <!--<ImageView-->
+        <!--android:layout_width="60dp"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:layout_marginTop="60dp"-->
+        <!--android:src="@drawable/marker" />-->
+
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="25dp"-->
+        <!--android:text="@string/lbl_you_are_at"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="25dp"-->
+        <!--android:textStyle="bold" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/location_address_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:layout_marginTop="72dp"-->
+        <!--android:textSize="16dp" />-->
+
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progress_bar"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/fetch_address_button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:background="@color/btn_bg"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:paddingRight="20dp"-->
+        <!--android:text="@string/btn_get_location"-->
+        <!--android:textColor="@color/white" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/signin"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="60dp"-->
+        <!--android:background="@color/btn_bg"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:paddingRight="20dp"-->
+        <!--android:text="@string/login_signup"-->
+        <!--android:textColor="@color/white" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/skiplogin"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="60dp"-->
+        <!--android:background="@color/btn_bg"-->
+        <!--android:paddingLeft="20dp"-->
+        <!--android:paddingRight="20dp"-->
+        <!--android:text="@string/skip_login"-->
+        <!--android:textColor="@color/white" />-->
+
+<!--</LinearLayout>-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:paddingLeft="16dp"
+android:paddingRight="16dp"
+android:background="@color/view_bg"
+android:paddingTop="16dp"
+android:paddingBottom="16dp"
+tools:context=".MainActivity">
+    <ImageView
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:layout_marginTop="60dp"
+        android:layout_centerHorizontal="true"
+    android:src="@drawable/marker" />
 
     <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="125dp"
+    android:text="@string/lbl_you_are_at"
+    android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+    android:textSize="30dp"
+    android:textStyle="bold" />
+
+<TextView
+    android:id="@+id/location_address_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginTop="170dp"
+    android:layout_centerHorizontal="true"
+    android:textColor="@color/white"
+    android:textSize="25dp" />
+<Button
+    android:id="@+id/fetch_address_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/fetch_address"
+    android:layout_marginTop="310dp"
+    android:layout_centerHorizontal="true"
+    android:onClick="fetchAddressButtonHandler" />
+
+<ProgressBar
+    android:id="@+id/progress_bar"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/login_signup"
+        android:layout_marginTop="360dp"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skip_login"
+        android:layout_marginTop="410dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="skipButtonHandler"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
+
